--- a/UI.portfolio/card.storyboard
+++ b/UI.portfolio/card.storyboard
@@ -3,24 +3,15 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="u7z-2L-l0e">
             <objects>
-                <viewController id="qt2-86-pIa" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8p0-vQ-rAz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="PPD-Ht-gFH"/>
-                    </view>
-                </viewController>
+                <viewController id="qt2-86-pIa" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BbI-AB-QFE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-21" y="-8"/>
+            <point key="canvasLocation" x="-21.739130434782609" y="-8.0357142857142847"/>
         </scene>
     </scenes>
 </document>
